--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.6.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
